--- a/src/components/intercambio/intercambio.css
+++ b/src/components/intercambio/intercambio.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .section-intercambio{
@@ -10,4 +11,5 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    padding-bottom: 30px;
 }
